--- a/desenvolvimento.html
+++ b/desenvolvimento.html
@@ -103,116 +103,118 @@
     </div>
   </nav>
 
-  <!-- Conteúdo principal -->
-  <section class="container py-5">
-    <h1 class="text-center fw-bold mb-4">Desenvolvimento</h1>
-    <h4 class="text-center fw-bold mb-4">Explicação teórica de cada etapa</h4>
-    <p class="text-center text-secondary mb-5">Pipeline de análise em dados de exoma para genômica humana. (2025/2)</p>
+<!-- Conteúdo principal -->
+<section class="container py-5">
+  <h1 class="text-center fw-bold mb-4">Desenvolvimento</h1>
+  <h4 class="text-center fw-bold mb-4">Explicação teórica de cada etapa</h4>
+  <p class="text-center text-secondary mb-5">Pipeline de análise em dados de exoma para genômica humana. (2025/2)</p>
 
-    <div class="row g-4">
-
-      <!-- 1 -->
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">🧩</div>
-          <h5><a href="problema.html">1. Definição do Problema</a></h5>
-          <p>Ponto inicial para o desenvolvimento do projeto.</p>
-        </div>
-      </div>
-      
-      <!-- 2 -->
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">📕</div>
-          <h5><a href="literatura.html">2. Levantamento da Literatura</a></h5>
-          <p>Pesquisa e revisão de informações sobre o tema, para embasar o desenvolvimento do projeto.</p>
-        </div>
-      </div>
-
-      <!-- 3 -->
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">🧬</div>
-          <h5><a href="fastq.html">3. Arquivo FASTQ</a></h5>
-          <p>Estrutura e formato do arquivo que armazena sequências biológicas.</p>
-        </div>
-      </div>
-
-      <!-- 4 -->
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">🧪</div>
-          <h5><a href="qc.html">4. Controle de Qualidade</a></h5>
-          <p>QC dos arquivos FASTQ.</p>
-        </div>
-      </div>
-
-      <!-- 5 -->
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">✂️</div>
-          <h5><a href="trimagem.html">5. Trimagem</a></h5>
-          <p>Remoção de adaptadores e bases de baixa qualidade.</p>
-        </div>
-      </div>
-
-      <!-- 6 -->
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">📌</div>
-          <h5><a href="alinhamento.html">6. Alinhamento</a></h5>
-          <p>Mapeamento das leituras contra o genoma de referência.</p>
-        </div>
-      </div>
-
-      <div class="row g-4 mt-2 justify-content-center">
-      <!-- 7 -->
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">✅</div>
-          <h5><a href="bp.html">7. Boas práticas</a></h5>
-          <p>Práticas aplicadas às amostras que asseguram a identificação precisa e confiável das variantes genéticas.</p>
-        </div>
-      </div>
-
-      <!-- 8 -->
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">🔎</div>
-          <h5><a href="variantes.html">8. Chamada de Variantes</a></h5>
-          <p>Identificação de SNVs e indels nas amostras.</p>
-        </div>
+  <!-- Primeira linha de cards (1 a 6) -->
+  <div class="row g-4">
+    <!-- 1 -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">🧩</div>
+        <h5><a href="problema.html">1. Definição do Problema</a></h5>
+        <p>Ponto inicial para o desenvolvimento do projeto.</p>
       </div>
     </div>
 
-      <!-- Card 9 -->
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">📑</div>
-          <h5><a href="anotacao.html">9. Anotação de Variantes</a></h5>
-          <p>Enriquecimento funcional das variantes.</p>
-        </div>
+    <!-- 2 -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">📕</div>
+        <h5><a href="literatura.html">2. Levantamento da Literatura</a></h5>
+        <p>Pesquisa e revisão de informações sobre o tema, para embasar o desenvolvimento do projeto.</p>
       </div>
     </div>
 
-      <!-- Card 10 centralizado -->
-      <div class="row justify-content-center g-4 mt-2">
-      <div class="col-md-4 text-center">
-        <div class="step-card">
-          <div class="icon-circle">📊</div>
-          <h5><a href="analise.html">10. Análises</a></h5>
-            <p>Exploração estatística e interpretação biológica dos resultados.</p>
-         </div>
-        </div>
+    <!-- 3 -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">🧬</div>
+        <h5><a href="fastq.html">3. Arquivo FASTQ</a></h5>
+        <p>Estrutura e formato do arquivo que armazena sequências biológicas.</p>
       </div>
-    
-  </section>
+    </div>
+
+    <!-- 4 -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">🧪</div>
+        <h5><a href="qc.html">4. Controle de Qualidade</a></h5>
+        <p>QC dos arquivos FASTQ.</p>
+      </div>
+    </div>
+
+    <!-- 5 -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">✂️</div>
+        <h5><a href="trimagem.html">5. Trimagem</a></h5>
+        <p>Remoção de adaptadores e bases de baixa qualidade.</p>
+      </div>
+    </div>
+
+    <!-- 6 -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">📌</div>
+        <h5><a href="alinhamento.html">6. Alinhamento</a></h5>
+        <p>Mapeamento das leituras contra o genoma de referência.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Segunda linha de cards (7 a 9) -->
+  <div class="row g-4 mt-2">
+    <!-- 7 -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">✅</div>
+        <h5><a href="bp.html">7. Boas práticas</a></h5>
+        <p>Práticas aplicadas às amostras que asseguram a identificação precisa e confiável das variantes genéticas.</p>
+      </div>
+    </div>
+
+    <!-- 8 -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">🔎</div>
+        <h5><a href="variantes.html">8. Chamada de Variantes</a></h5>
+        <p>Identificação de SNVs e indels nas amostras.</p>
+      </div>
+    </div>
+
+    <!-- 9 -->
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">📑</div>
+        <h5><a href="anotacao.html">9. Anotação de Variantes</a></h5>
+        <p>Enriquecimento funcional das variantes.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Última linha: card 10 centralizado -->
+  <div class="row g-4 mt-2 justify-content-center">
+    <div class="col-md-4 text-center">
+      <div class="step-card">
+        <div class="icon-circle">📊</div>
+        <h5><a href="analise.html">10. Análises</a></h5>
+        <p>Exploração estatística e interpretação biológica dos resultados.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
 </body>
 </html>
+
 
 
 
