--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
   </nav>
 
   <section class="container py-5">
-    <h1 class="text-center fw-bold mb-4">Aprendizagem Baseada em Projetos aplicada ao ensino de graduação</h1>
+    <h1 class="text-center fw-bold mb-4">Aprendizagem Baseada em Projetos Aplicada ao Ensino de Graduação</h1>
     
     <!-- Objetivos -->
     <div class="step-card">
       <h4 class="fw-bold mb-4">Objetivo</h4>
-      <p>Desenvolver um projeto piloto de aprendizagem baseada em projetos voltado à resolução de um problema de pesquisa real.</p>
+      <p>Desenvolver um projeto piloto de aprendizagem baseada em projetos voltado à resolução de um problema de pesquisa real em genômica humana.</p>
     </div>
 
     <!-- Metas -->
